# lsimons-auto

./: .gitignore  .mise.toml  AGENT.md  AGENTS.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md  com.leosimons.start-the-day.plist  install.py  pyproject.toml  start_the_day.py  test_start_the_day.py
.beads/: issues.jsonl
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CODE_QUALITY_REPORT.md
docs/spec/: 000-shared-patterns.md  001-spec-based-development.md  002-actions-submodule-command-dispatcher.md  003-update-desktop-background-action.md  004-organize-desktop-action.md  005-start-the-day-daily-routine.md  006-install-script.md  007-launch-apps-action.md  009-git-sync-action.md  010-gdrive-sync-action.md  011-agent-action.md  013-tc-action.md  014-git-actions-upgrade.md  015-git-actions-watch.md  017-git-dependabot-review.md  018-brain-action.md
etc/: com.leosimons.gdrive-sync.plist  com.leosimons.start-the-day.plist
lsimons_auto/: __init__.py  logging_utils.py  lsimons_auto.py  shared.py  start_the_day.py  utils.py
lsimons_auto/actions/: __init__.py  agent.py  agent_manager.py  ask_m365_copilot.scpt  brain.py  copilot.py  echo.py  gdrive_sync.py  git_actions_watch.py  git_dependabot_review.py  git_sync.py  launch_apps.py  organize_desktop.py  tc.py  update_desktop_background.py
lsimons_auto/actions/agent_impl/: __init__.py  cli.py  ghostty.py  layout.py  session.py  workspace.py  worktree.py
lsimons_auto/actions/agent_manager_impl/: __init__.py  cli.py  ghostty.py  layout.py  session.py  tmux.py  workspace.py  zed.py
test/: test_start_the_day.py
tests/: __init__.py  test_actions_integration.py  test_agent.py  test_agent_manager.py  test_brain.py  test_copilot.py  test_echo.py  test_gdrive_sync.py  test_git_actions_watch.py  test_git_dependabot_review.py  test_git_sync.py  test_install.py  test_launch_apps.py  test_logging_utils.py  test_lsimons_auto.py  test_organize_desktop.py  test_shared.py  test_start_the_day.py  test_tc.py  test_update_desktop_background.py  test_utils.py
tests/agent_impl/: __init__.py  test_cli.py  test_ghostty.py  test_session.py  test_workspace.py  test_worktree.py
tests/agent_manager_impl/: __init__.py  test_cli.py  test_ghostty.py  test_session.py  test_tmux.py  test_workspace.py  test_worktree.py  test_zed.py
